Enhance popup with minute and second inputs
Added input fields for minutes and seconds to set refresh interval.

--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>Auto Refresher</title>
@@ -42,7 +42,8 @@
 </head>
 <body>
   <h3>Set Refresh Interval (Seconds.)</h3>
-  <input type="number" id="interval" min="1" placeholder="e.g., 60">
+  <label>Minutes: <input type="number" id="minutes" min="0" placeholder="eg:0 (min.)"></label><br>
+  <label>Seconds: <input type="number" id="seconds" min="0" max="59" placeholder="eg:60 (secs.)"></label>
   <button id="start">Start</button>
   <button id="stop" disabled>Stop</button>
   <p id="status"></p>
